fix: Later Departures overflowing in Screenplay
Later Departures implements its carousel using an element wider than the
screen which is shifted to display each departure. On the normal screen
page the `.screen-container` hides any overflow, but this container is
not used for Screenplay simulations.

--- a/assets/css/v2/lcd_common/simulation.scss
+++ b/assets/css/v2/lcd_common/simulation.scss
@@ -25,6 +25,7 @@
     width: 193.5px;
     height: 344px;
     margin-right: 24px;
+    overflow: hidden;
     box-shadow: 0 0 32px 0 #00000040;
 
     & > * {
